// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Paper > renders correctly with round: lg, outline: 50, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-50
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-50-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 50, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-50-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 50, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-50-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-50-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 200, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-accent-200 mt-20"
    outline="200"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-200
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-200-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 200, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-accent-200 mt-20"
    outline="200"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-200-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 200, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-accent-200 mt-20"
    outline="200"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-200-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-200-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 500, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-accent-500 mt-20"
    outline="500"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-500
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-500-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 500, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-accent-500 mt-20"
    outline="500"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-500-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 500, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-accent-500 mt-20"
    outline="500"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-500-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-500-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 700, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-contrast-primary-200 mt-20"
    outline="700"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-700
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-700-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 700, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-contrast-primary-200 mt-20"
    outline="700"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-700-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: lg, outline: 700, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-big border-background-contrast-primary-200 mt-20"
    outline="700"
    round="lg"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        lg-700-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        lg-700-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 50, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-50
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-50-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 50, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-50-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 50, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-50-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-50-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 200, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-accent-200 mt-20"
    outline="200"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-200
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-200-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 200, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-accent-200 mt-20"
    outline="200"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-200-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 200, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-accent-200 mt-20"
    outline="200"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-200-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-200-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 500, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-accent-500 mt-20"
    outline="500"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-500
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-500-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 500, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-accent-500 mt-20"
    outline="500"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-500-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 500, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-accent-500 mt-20"
    outline="500"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-500-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-500-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 700, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-contrast-primary-200 mt-20"
    outline="700"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-700
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-700-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 700, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-contrast-primary-200 mt-20"
    outline="700"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-700-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: no, outline: 700, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-border-radius-default border-background-contrast-primary-200 mt-20"
    outline="700"
    round="no"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        no-700-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        no-700-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 50, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-50
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-50-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 50, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-50-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 50, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-contrast-primary-50 shadow-[0_1px_6px_rgb(0,0,0,0.07)] mt-20"
    outline="50"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-50-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-50-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 200, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-accent-200 mt-20"
    outline="200"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-200
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-200-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 200, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-accent-200 mt-20"
    outline="200"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-200-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 200, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-accent-200 mt-20"
    outline="200"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-200-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-200-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 500, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-accent-500 mt-20"
    outline="500"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-500
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-500-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 500, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-accent-500 mt-20"
    outline="500"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-500-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 500, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-accent-500 mt-20"
    outline="500"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-500-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-500-title only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 700, with actions and title 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-contrast-primary-200 mt-20"
    outline="700"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-700
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-700-actions & title
      </span>
    </div>
    <div
      class="grid grid-cols-5 gap-4 items-center"
    >
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   ring-background-accent-200 px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-button-border-radius-xs-default w-full col-span-3"
        type="button"
        variant="standard"
      >
        Cancel
      </button>
      <button
        class="
    flex flex-row items-center justify-center gap-3
    font-orbitron font-orbitron-3 text-button-text-color-default leading-2 text-2
    ring-border-1
    hover:ring-background-contrast-primary-500
    hover:ring-border-2
    active:ring-button-background-secondary 
    active:bg-button-background-pressed 
    focus:outline-0 focus:ring-background-contrast-primary-500 
    disabled:cursor-not-allowed
    disabled:opacity-button-opacity-disabled
   bg-button-background-primary text-button-text-color-primary ring-button-background-primary px-button-spacing-xs-h-default py-button-spacing-xs-v-default h-button-sm rounded-l-button-border-radius-xs-default rounded-r-button-border-radius-xs-big w-full col-span-2"
        rounded="R"
        type="button"
        variant="filled"
      >
        Do it
      </button>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 700, with content only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-contrast-primary-200 mt-20"
    outline="700"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    />
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-700-content only
      </span>
    </div>
  </div>
</div>
`;

exports[`Paper > renders correctly with round: xs, outline: 700, with title only 1`] = `
<div>
  <div
    class="
    relative flex flex-col gap-5 pl-5 pr-5 pt-5 pb-5 bg-background-primary 
    border-border-1 rounded-tr-border-radius-default rounded-tl-border-radius-default 
    rounded-br-border-radius-default mt-10
   rounded-bl-paper-border-radius-md border-background-contrast-primary-200 mt-20"
    outline="700"
    round="xs"
  >
    <div
      class="absolute left-0 top-0 translate-y-full-plus-var-spacing"
    >
      <h6>
        xs-700-no actions
      </h6>
    </div>
    <div
      class="h-40 min-w-60 w-full bg-background-accent-200 flex justify-center items-center rounded-md"
    >
      <span>
        xs-700-title only
      </span>
    </div>
  </div>
</div>
`;
